objects/fferpcore__UserInformationAssignment__c.object
<CustomObject>
    <customHelpPage>fferpcore__UserInformationAssignmentHelp</customHelpPage>
    <description>Contains the information about the user management template that is to be granted or removed from the user.</description>
    <fields>
        <fullName>fferpcore__Message__c</fullName>
        <description>Errors that occurred when applying the user information to the Salesforce User.</description>
        <inlineHelpText>Errors that occurred when applying the user information to the Salesforce User.</inlineHelpText>
        <label>Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>fferpcore__Status__c</fullName>
        <description>The status of the information to be applied to the Salesforce User.</description>
        <inlineHelpText>The status of the information to be applied to the Salesforce User.</inlineHelpText>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Assignment</fullName>
                    <default>true</default>
                    <label>Pending Assignment</label>
                </value>
                <value>
                    <fullName>Pending Removal</fullName>
                </value>
                <value>
                    <fullName>Assigning</fullName>
                </value>
                <value>
                    <fullName>Removing</fullName>
                </value>
                <value>
                    <fullName>Failed to Assign</fullName>
                </value>
                <value>
                    <fullName>Failed to Remove</fullName>
                </value>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>Removed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>fferpcore__TemplateName__c</fullName>
        <description>Name of the User Management Template to be applied to the Salesforce User.</description>
        <inlineHelpText>Name of the User Management Template to be applied to the Salesforce User.</inlineHelpText>
        <label>Template Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fferpcore__UniquenessConstraint__c</fullName>
        <description>An identifier which is used to prevent duplicate user information assignments from being created.</description>
        <inlineHelpText>An identifier which is used to prevent duplicate user information assignments from being created.</inlineHelpText>
        <label>Uniqueness Constraint</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>fferpcore__UserInformation__c</fullName>
        <description>User information to which this user information assignment belongs.</description>
        <inlineHelpText>User information to which this user information assignment belongs.</inlineHelpText>
        <label>User Information</label>
        <referenceTo>fferpcore__UserInformation__c</referenceTo>
        <relationshipLabel>Assignments</relationshipLabel>
        <relationshipName>Assignments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>User Information Assignment</label>
    <listViews>
        <fullName>fferpcore__All</fullName>
        <columns>NAME</columns>
        <columns>fferpcore__Status__c</columns>
        <columns>fferpcore__TemplateName__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>UIA{0000000}</displayFormat>
        <label>Assignment</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Information Assignments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>